[workspace.package]
version = "0.15.2"
authors = ["Elham Aryanpur <elhamaryanpur5@gmail.com>"]
description = "🔥 Blazingly Fast 🔥 web server runtime for Lua"
edition = "2024"
license = "Apache-2.0"
exclude = ["examples"]

[workspace]
members = ["src/common", "src/lua_bin"]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.8.0", features = ["macros", "multipart"] }
mlua = { version = "0.10.2", features = [
    "serialize",
    "vendored",
    "async",
    "send",
    "error-send",
    "macros",
    "anyhow",
] }
reqwest = { version = "0.12.11", features = [
    "json",
    "rustls-tls",
    "charset",
    "multipart",
    "http2",
    "stream",
    "macos-system-configuration",
], default-features = false }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133" }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
bytes = { version = "1.9.0", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = false
debug = 0
[profile.release.package."*"]
opt-level = 3
codegen-units = 1
