[package]
name = "lua-astra"
version = "0.19.3"
authors = ["Elham Aryanpur <elhamaryanpur5@gmail.com>"]
description = "🔥 Blazingly Fast 🔥 web server runtime for Lua"
documentation = "https://astra.arkforge.net/docs/latest"
repository = "https://github.com/ArkForgeLabs/Astra"
keywords = ["lua", "luau", "server", "webserver", "runtime"]
categories = [
    "web-programming",
    "web-programming::http-server",
    "web-programming::http-client",
    "network-programming",
]
edition = "2024"
license = "Apache-2.0"
exclude = ["examples", "docs"]

[[bin]]
name = "astra"
path = "src/main.rs"

[features]
default = ["luajit"]
luajit = ["mlua/luajit"]
luajit52 = ["mlua/luajit52"]
luau = ["mlua/luau"]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]

[dependencies]
mlua = { version = "0.10.3", features = [
    "serialize",
    "vendored",
    "async",
    "send",
    "error-send",
    "macros",
    "anyhow",
] }

# http
axum = { version = "0.8.3", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
reqwest = { version = "0.12.15", features = [
    "json",
    "rustls-tls",
    "charset",
    "multipart",
    "http2",
    "stream",
    "macos-system-configuration",
], default-features = false }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = [
    "fs",
    "trace",
    "compression-full",
    "decompression-full",
] }

# data formats
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
toml = "0.8.20"
sha2 = "0.10.8"
sha3 = "0.10.8"
base64 = "0.22.1"
bytes = { version = "1.10.1", features = ["serde"] }
chrono = { version = "0.4.40", features = ["serde"] }

# runtime
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.34", features = ["cargo", "derive"] }
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
version-compare = "0.2.0"

# database
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "sqlite",
    "json",
    "chrono",
    "uuid",
] }
time = "0.3.41"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = false
debug = 0
[profile.release.package."*"]
opt-level = 3
codegen-units = 1
