[package]
name = "lua_vm_luau"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true

[dependencies]
mlua = { version = "0.10.2", features = [
    "luau",
    "serialize",
    "vendored",
    "async",
    "send",
    "error-send",
    "macros",
    "anyhow",
] }
