[package]
name = "utils"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true

[features]
default = []
luajit = ["mlua/luajit"]
luau = ["mlua/luau-jit"]

[dependencies]
mlua = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = { version = "0.4.39", features = ["serde"] }
reqwest = { workspace = true }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "json",
    "chrono",
    "uuid",
] }
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
common = { path = "../common" }
sha2 = "0.10.8"
sha3 = "0.10.8"
base64 = "0.22.1"
